--- a/frontend/vite-project/index.html
+++ b/frontend/vite-project/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <style>
+    input[type=number] {
+      -moz-appearance: textfield; /* Firefox */
+    }
+
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+      -webkit-appearance: none; /* Chrome, Safari, Edge */
+      margin: 0;
+    }
+  </style>
   </head>
   <body>
     <div id="root"></div>
